--- a/Tournament/Tournament.csproj
+++ b/Tournament/Tournament.csproj
@@ -579,6 +579,7 @@
     <Content Include="Views\RinkOrders\Edit.cshtml" />
     <Content Include="Views\RinkOrders\Index.cshtml" />
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
+    <Content Include="Views\GetSchedule\ScheduleReport.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -626,6 +627,16 @@
     </Content>
     <Content Include="ReportFiles\ScoreCard.rdlc">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReportFiles\Teams.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ReportFiles\Schedule.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
